# retail-demand-forecasting-optimization

./: .gitignore  pyproject.toml
models/: xgboost_model.joblib  xgboost_model_v2.joblib
notebooks/: 01_Notebook_Understanding.ipynb  02_Data_Preparation.ipynb  03_EDA.ipynb  04_Feature_Engineering.ipynb  05_Baseline_Forecasting.ipynb  06_XGBoost_Demand_Forecasting.ipynb  07_Model_Explainability.ipynb  08_Inventory_Optimization.ipynb  09_Scenario_Analysis.ipynb
retail_demand_forecasting_optimization.egg-info/: PKG-INFO  SOURCES.txt
src/data/: loader.py  preprocessing.py
src/optimization/: inventory_optimizer.py
src/utils/: config.py  helpers.py  project_setup.py
