[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-demand-forecasting-optimization"
version = "0.1.0"
description = "Retail demand forecasting with XGBoost and inventory optimization using PuLP."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]